add filter to only use topics with history

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -463,28 +463,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "pt.Experiment: 100%|██████████| 5/5 [00:08<00:00,  1.76s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:08<00:00,  1.74s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:08<00:00,  1.74s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:09<00:00,  1.84s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:09<00:00,  1.83s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:09<00:00,  1.84s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:05<00:00,  1.18s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:05<00:00,  1.18s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:05<00:00,  1.18s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:03<00:00,  1.26system/s]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:03<00:00,  1.25system/s]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:03<00:00,  1.25system/s]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:14<00:00,  2.96s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:14<00:00,  2.97s/system]\n",
-      "pt.Experiment: 100%|██████████| 5/5 [00:14<00:00,  2.93s/system]\n"
+      "pt.Experiment: 100%|██████████| 5/5 [00:07<00:00,  1.58s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:07<00:00,  1.56s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:07<00:00,  1.58s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:08<00:00,  1.64s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:08<00:00,  1.65s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:08<00:00,  1.64s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:05<00:00,  1.06s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:05<00:00,  1.06s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:05<00:00,  1.07s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:03<00:00,  1.35system/s]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:03<00:00,  1.34system/s]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:03<00:00,  1.36system/s]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:13<00:00,  2.71s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:13<00:00,  2.71s/system]\n",
+      "pt.Experiment: 100%|██████████| 5/5 [00:13<00:00,  2.68s/system]\n"
      ]
     }
    ],
@@ -495,7 +495,7 @@
     "\n",
     "for sub_collection in sub_collections:    \n",
     "    topics, qrels = load_data(sub_collection)\n",
-    "    # topics = filter_known_topics(topics, sub_collection)\n",
+    "    topics = filter_known_topics(topics, sub_collection)\n",
     "        \n",
     "    for fold_no in range(0, len(folds[sub_collection])):\n",
     "        train_docids = folds[sub_collection][str(fold_no)][\"train\"]\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -575,207 +575,207 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">$t_1$</th>\n",
        "      <th>BM25</th>\n",
-       "      <td>0.259091</td>\n",
-       "      <td>0.165295</td>\n",
-       "      <td>0.283174</td>\n",
-       "      <td>0.085865</td>\n",
-       "      <td>0.241249</td>\n",
+       "      <td>0.210387</td>\n",
+       "      <td>0.124980</td>\n",
+       "      <td>0.228038</td>\n",
+       "      <td>0.069028</td>\n",
+       "      <td>0.217848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RM3</th>\n",
-       "      <td>0.256909</td>\n",
-       "      <td>0.157102</td>\n",
-       "      <td>0.282520</td>\n",
-       "      <td>0.082426</td>\n",
-       "      <td>0.225607</td>\n",
+       "      <td>0.209302</td>\n",
+       "      <td>0.120403</td>\n",
+       "      <td>0.233044</td>\n",
+       "      <td>0.070139</td>\n",
+       "      <td>0.206548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+Bo1</th>\n",
-       "      <td>0.260772</td>\n",
-       "      <td>0.162393</td>\n",
-       "      <td>0.287019</td>\n",
-       "      <td>0.085261</td>\n",
-       "      <td>0.229962</td>\n",
+       "      <td>0.217031</td>\n",
+       "      <td>0.130342</td>\n",
+       "      <td>0.238136</td>\n",
+       "      <td>0.072639</td>\n",
+       "      <td>0.219205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RF</th>\n",
-       "      <td>0.291324</td>\n",
-       "      <td>0.199653</td>\n",
-       "      <td>0.315291</td>\n",
-       "      <td>0.098186</td>\n",
-       "      <td>0.322624</td>\n",
+       "      <td>0.328842</td>\n",
+       "      <td>0.251247</td>\n",
+       "      <td>0.346069</td>\n",
+       "      <td>0.114306</td>\n",
+       "      <td>0.516901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+qrel</th>\n",
-       "      <td>0.301334</td>\n",
-       "      <td>0.216052</td>\n",
-       "      <td>0.306704</td>\n",
-       "      <td>0.102721</td>\n",
-       "      <td>0.344759</td>\n",
+       "      <td>0.365628</td>\n",
+       "      <td>0.311513</td>\n",
+       "      <td>0.314509</td>\n",
+       "      <td>0.130972</td>\n",
+       "      <td>0.598246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">$t_2$</th>\n",
        "      <th>BM25</th>\n",
-       "      <td>0.272433</td>\n",
-       "      <td>0.169067</td>\n",
-       "      <td>0.287618</td>\n",
-       "      <td>0.093969</td>\n",
-       "      <td>0.251472</td>\n",
+       "      <td>0.257668</td>\n",
+       "      <td>0.160785</td>\n",
+       "      <td>0.268939</td>\n",
+       "      <td>0.101072</td>\n",
+       "      <td>0.253991</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RM3</th>\n",
-       "      <td>0.271184</td>\n",
-       "      <td>0.169780</td>\n",
-       "      <td>0.286325</td>\n",
-       "      <td>0.096786</td>\n",
-       "      <td>0.242092</td>\n",
+       "      <td>0.255681</td>\n",
+       "      <td>0.156390</td>\n",
+       "      <td>0.266143</td>\n",
+       "      <td>0.100857</td>\n",
+       "      <td>0.245758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+Bo1</th>\n",
-       "      <td>0.279458</td>\n",
-       "      <td>0.175346</td>\n",
-       "      <td>0.293885</td>\n",
-       "      <td>0.097328</td>\n",
-       "      <td>0.257693</td>\n",
+       "      <td>0.261900</td>\n",
+       "      <td>0.159913</td>\n",
+       "      <td>0.271265</td>\n",
+       "      <td>0.102465</td>\n",
+       "      <td>0.252486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RF</th>\n",
-       "      <td>0.306360</td>\n",
-       "      <td>0.203202</td>\n",
-       "      <td>0.315324</td>\n",
-       "      <td>0.107259</td>\n",
-       "      <td>0.338251</td>\n",
+       "      <td>0.358357</td>\n",
+       "      <td>0.262092</td>\n",
+       "      <td>0.351168</td>\n",
+       "      <td>0.140514</td>\n",
+       "      <td>0.511538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+qrel</th>\n",
-       "      <td>0.314160</td>\n",
-       "      <td>0.218960</td>\n",
-       "      <td>0.312415</td>\n",
-       "      <td>0.113109</td>\n",
-       "      <td>0.353652</td>\n",
+       "      <td>0.381505</td>\n",
+       "      <td>0.308861</td>\n",
+       "      <td>0.342533</td>\n",
+       "      <td>0.157878</td>\n",
+       "      <td>0.557248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">$t_3$</th>\n",
        "      <th>BM25</th>\n",
-       "      <td>0.326933</td>\n",
-       "      <td>0.181610</td>\n",
-       "      <td>0.394026</td>\n",
-       "      <td>0.147635</td>\n",
-       "      <td>0.349052</td>\n",
+       "      <td>0.261485</td>\n",
+       "      <td>0.133750</td>\n",
+       "      <td>0.315836</td>\n",
+       "      <td>0.116918</td>\n",
+       "      <td>0.275848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RM3</th>\n",
-       "      <td>0.331352</td>\n",
-       "      <td>0.175371</td>\n",
-       "      <td>0.408827</td>\n",
-       "      <td>0.143740</td>\n",
-       "      <td>0.329035</td>\n",
+       "      <td>0.259608</td>\n",
+       "      <td>0.123261</td>\n",
+       "      <td>0.328658</td>\n",
+       "      <td>0.110553</td>\n",
+       "      <td>0.244834</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+Bo1</th>\n",
-       "      <td>0.333346</td>\n",
-       "      <td>0.179306</td>\n",
-       "      <td>0.404143</td>\n",
-       "      <td>0.148136</td>\n",
-       "      <td>0.336380</td>\n",
+       "      <td>0.260430</td>\n",
+       "      <td>0.129971</td>\n",
+       "      <td>0.325410</td>\n",
+       "      <td>0.118258</td>\n",
+       "      <td>0.250218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RF</th>\n",
-       "      <td>0.354902</td>\n",
-       "      <td>0.210648</td>\n",
-       "      <td>0.419518</td>\n",
-       "      <td>0.165109</td>\n",
-       "      <td>0.437736</td>\n",
+       "      <td>0.345672</td>\n",
+       "      <td>0.221157</td>\n",
+       "      <td>0.392566</td>\n",
+       "      <td>0.169514</td>\n",
+       "      <td>0.542792</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+qrel</th>\n",
-       "      <td>0.351063</td>\n",
-       "      <td>0.211213</td>\n",
-       "      <td>0.408999</td>\n",
-       "      <td>0.163161</td>\n",
-       "      <td>0.426140</td>\n",
+       "      <td>0.334116</td>\n",
+       "      <td>0.222856</td>\n",
+       "      <td>0.360905</td>\n",
+       "      <td>0.163652</td>\n",
+       "      <td>0.507887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">$t_4$</th>\n",
        "      <th>BM25</th>\n",
-       "      <td>0.243532</td>\n",
-       "      <td>0.149969</td>\n",
-       "      <td>0.309533</td>\n",
-       "      <td>0.120545</td>\n",
-       "      <td>0.291830</td>\n",
+       "      <td>0.234039</td>\n",
+       "      <td>0.138516</td>\n",
+       "      <td>0.306403</td>\n",
+       "      <td>0.115949</td>\n",
+       "      <td>0.286596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RM3</th>\n",
-       "      <td>0.249214</td>\n",
-       "      <td>0.156164</td>\n",
-       "      <td>0.322766</td>\n",
-       "      <td>0.128135</td>\n",
-       "      <td>0.287820</td>\n",
+       "      <td>0.235974</td>\n",
+       "      <td>0.140631</td>\n",
+       "      <td>0.320773</td>\n",
+       "      <td>0.122807</td>\n",
+       "      <td>0.272655</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+Bo1</th>\n",
-       "      <td>0.255482</td>\n",
-       "      <td>0.159189</td>\n",
-       "      <td>0.324370</td>\n",
-       "      <td>0.127228</td>\n",
-       "      <td>0.306167</td>\n",
+       "      <td>0.241687</td>\n",
+       "      <td>0.145484</td>\n",
+       "      <td>0.320737</td>\n",
+       "      <td>0.123445</td>\n",
+       "      <td>0.292993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RF</th>\n",
-       "      <td>0.284108</td>\n",
-       "      <td>0.197009</td>\n",
-       "      <td>0.337179</td>\n",
-       "      <td>0.144884</td>\n",
-       "      <td>0.424196</td>\n",
+       "      <td>0.312474</td>\n",
+       "      <td>0.229445</td>\n",
+       "      <td>0.359845</td>\n",
+       "      <td>0.162998</td>\n",
+       "      <td>0.542463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+qrel</th>\n",
-       "      <td>0.299747</td>\n",
-       "      <td>0.221484</td>\n",
-       "      <td>0.334192</td>\n",
-       "      <td>0.158498</td>\n",
-       "      <td>0.457040</td>\n",
+       "      <td>0.342704</td>\n",
+       "      <td>0.276755</td>\n",
+       "      <td>0.354069</td>\n",
+       "      <td>0.189314</td>\n",
+       "      <td>0.605949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">$t_5$</th>\n",
        "      <th>BM25</th>\n",
-       "      <td>0.195403</td>\n",
-       "      <td>0.133515</td>\n",
-       "      <td>0.257788</td>\n",
-       "      <td>0.099846</td>\n",
-       "      <td>0.298830</td>\n",
+       "      <td>0.184734</td>\n",
+       "      <td>0.116216</td>\n",
+       "      <td>0.250507</td>\n",
+       "      <td>0.093679</td>\n",
+       "      <td>0.276000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RM3</th>\n",
-       "      <td>0.200452</td>\n",
-       "      <td>0.137173</td>\n",
-       "      <td>0.263156</td>\n",
-       "      <td>0.104523</td>\n",
-       "      <td>0.293667</td>\n",
+       "      <td>0.189237</td>\n",
+       "      <td>0.117816</td>\n",
+       "      <td>0.257660</td>\n",
+       "      <td>0.096110</td>\n",
+       "      <td>0.271239</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+Bo1</th>\n",
-       "      <td>0.198450</td>\n",
-       "      <td>0.134574</td>\n",
-       "      <td>0.262771</td>\n",
-       "      <td>0.102635</td>\n",
-       "      <td>0.290643</td>\n",
+       "      <td>0.186812</td>\n",
+       "      <td>0.116100</td>\n",
+       "      <td>0.256194</td>\n",
+       "      <td>0.097083</td>\n",
+       "      <td>0.260528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+RF</th>\n",
-       "      <td>0.211929</td>\n",
-       "      <td>0.152115</td>\n",
-       "      <td>0.268308</td>\n",
-       "      <td>0.110057</td>\n",
-       "      <td>0.357009</td>\n",
+       "      <td>0.225393</td>\n",
+       "      <td>0.161977</td>\n",
+       "      <td>0.276389</td>\n",
+       "      <td>0.118801</td>\n",
+       "      <td>0.419137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>+qrel</th>\n",
-       "      <td>0.217697</td>\n",
-       "      <td>0.162386</td>\n",
-       "      <td>0.265124</td>\n",
-       "      <td>0.116447</td>\n",
-       "      <td>0.378359</td>\n",
+       "      <td>0.239583</td>\n",
+       "      <td>0.187248</td>\n",
+       "      <td>0.268555</td>\n",
+       "      <td>0.134522</td>\n",
+       "      <td>0.471664</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -784,46 +784,46 @@
       "text/plain": [
        "                 nDCG   nDCG@10     bpref      P@10       MRR\n",
        "t     Run                                                    \n",
-       "$t_1$ BM25   0.259091  0.165295  0.283174  0.085865  0.241249\n",
-       "      +RM3   0.256909  0.157102  0.282520  0.082426  0.225607\n",
-       "      +Bo1   0.260772  0.162393  0.287019  0.085261  0.229962\n",
-       "      +RF    0.291324  0.199653  0.315291  0.098186  0.322624\n",
-       "      +qrel  0.301334  0.216052  0.306704  0.102721  0.344759\n",
-       "$t_2$ BM25   0.272433  0.169067  0.287618  0.093969  0.251472\n",
-       "      +RM3   0.271184  0.169780  0.286325  0.096786  0.242092\n",
-       "      +Bo1   0.279458  0.175346  0.293885  0.097328  0.257693\n",
-       "      +RF    0.306360  0.203202  0.315324  0.107259  0.338251\n",
-       "      +qrel  0.314160  0.218960  0.312415  0.113109  0.353652\n",
-       "$t_3$ BM25   0.326933  0.181610  0.394026  0.147635  0.349052\n",
-       "      +RM3   0.331352  0.175371  0.408827  0.143740  0.329035\n",
-       "      +Bo1   0.333346  0.179306  0.404143  0.148136  0.336380\n",
-       "      +RF    0.354902  0.210648  0.419518  0.165109  0.437736\n",
-       "      +qrel  0.351063  0.211213  0.408999  0.163161  0.426140\n",
-       "$t_4$ BM25   0.243532  0.149969  0.309533  0.120545  0.291830\n",
-       "      +RM3   0.249214  0.156164  0.322766  0.128135  0.287820\n",
-       "      +Bo1   0.255482  0.159189  0.324370  0.127228  0.306167\n",
-       "      +RF    0.284108  0.197009  0.337179  0.144884  0.424196\n",
-       "      +qrel  0.299747  0.221484  0.334192  0.158498  0.457040\n",
-       "$t_5$ BM25   0.195403  0.133515  0.257788  0.099846  0.298830\n",
-       "      +RM3   0.200452  0.137173  0.263156  0.104523  0.293667\n",
-       "      +Bo1   0.198450  0.134574  0.262771  0.102635  0.290643\n",
-       "      +RF    0.211929  0.152115  0.268308  0.110057  0.357009\n",
-       "      +qrel  0.217697  0.162386  0.265124  0.116447  0.378359"
+       "$t_1$ BM25   0.210387  0.124980  0.228038  0.069028  0.217848\n",
+       "      +RM3   0.209302  0.120403  0.233044  0.070139  0.206548\n",
+       "      +Bo1   0.217031  0.130342  0.238136  0.072639  0.219205\n",
+       "      +RF    0.328842  0.251247  0.346069  0.114306  0.516901\n",
+       "      +qrel  0.365628  0.311513  0.314509  0.130972  0.598246\n",
+       "$t_2$ BM25   0.257668  0.160785  0.268939  0.101072  0.253991\n",
+       "      +RM3   0.255681  0.156390  0.266143  0.100857  0.245758\n",
+       "      +Bo1   0.261900  0.159913  0.271265  0.102465  0.252486\n",
+       "      +RF    0.358357  0.262092  0.351168  0.140514  0.511538\n",
+       "      +qrel  0.381505  0.308861  0.342533  0.157878  0.557248\n",
+       "$t_3$ BM25   0.261485  0.133750  0.315836  0.116918  0.275848\n",
+       "      +RM3   0.259608  0.123261  0.328658  0.110553  0.244834\n",
+       "      +Bo1   0.260430  0.129971  0.325410  0.118258  0.250218\n",
+       "      +RF    0.345672  0.221157  0.392566  0.169514  0.542792\n",
+       "      +qrel  0.334116  0.222856  0.360905  0.163652  0.507887\n",
+       "$t_4$ BM25   0.234039  0.138516  0.306403  0.115949  0.286596\n",
+       "      +RM3   0.235974  0.140631  0.320773  0.122807  0.272655\n",
+       "      +Bo1   0.241687  0.145484  0.320737  0.123445  0.292993\n",
+       "      +RF    0.312474  0.229445  0.359845  0.162998  0.542463\n",
+       "      +qrel  0.342704  0.276755  0.354069  0.189314  0.605949\n",
+       "$t_5$ BM25   0.184734  0.116216  0.250507  0.093679  0.276000\n",
+       "      +RM3   0.189237  0.117816  0.257660  0.096110  0.271239\n",
+       "      +Bo1   0.186812  0.116100  0.256194  0.097083  0.260528\n",
+       "      +RF    0.225393  0.161977  0.276389  0.118801  0.419137\n",
+       "      +qrel  0.239583  0.187248  0.268555  0.134522  0.471664"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "table = make_table(results, folds=True)\n",
-    "table"
+    "table "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,27 +834,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": []
