--- a/paper/table-results.tex
+++ b/paper/table-results.tex
@@ -1,35 +1,32 @@
-\begin{tabular}{llccccc}
+\begin{table}[t]
+\small
+\centering
+\renewcommand{\tabcolsep}{3.2pt}
+\caption{ }
+\label{tab:table-results}
+
+\begin{tabular}{@{}l@{}cccccccccc@{}}
     \toprule
-    t & Run & nDCG & nDCG@10 & bpref & P@10 & MRR \\
+    \bfseries System & \multicolumn{5}{c}{\bfseries nDCG@10} & \multicolumn{5}{c}{\bfseries nDCG@10$^{'}$}\\
+    \cmidrule(r@{.25em}){2-6}
+    \cmidrule(l@{.25em}){7-11}
+    
+    & 07/23 & 09/23 & 01/24 & 06/24 & 08/24 & 07/23 & 09/23 & 01/24 & 06/24 & 08/24\\
+    
     \midrule
 
-     \multirow[c]{5}{*}{$t_1$}  & BM25 & 0.290 & 0.167 & 0.322 & 0.097 & 0.268 \\
-& +RM3 & 0.289 & 0.161 & 0.332 & 0.098 & 0.248 \\
-& +Bo1 & 0.299 & 0.172 & 0.338 & 0.101 & 0.266 \\
-& +RF & 0.460 & 0.344 & 0.512 & 0.150 & 0.577 \\
-& +qrel & 0.419 & 0.328 & 0.389 & 0.153 & 0.498 \\\midrule
-\multirow[c]{5}{*}{$t_2$}  & BM25 & 0.324 & 0.198 & 0.344 & 0.127 & 0.288 \\
-& +RM3 & 0.324 & 0.193 & 0.342 & 0.127 & 0.282 \\
-& +Bo1 & 0.332 & 0.200 & 0.349 & 0.131 & 0.288 \\
-& +RF & 0.501 & 0.377 & 0.507 & 0.194 & 0.617 \\
-& +qrel & 0.445 & 0.349 & 0.409 & 0.190 & 0.535 \\\midrule
-\multirow[c]{5}{*}{$t_3$}   & BM25 & 0.335 & 0.163 & 0.406 & 0.145 & 0.309 \\
-& +RM3 & 0.334 & 0.152 & 0.424 & 0.138 & 0.275 \\
-& +Bo1 & 0.336 & 0.161 & 0.421 & 0.147 & 0.285 \\
-& +RF & 0.448 & 0.266 & 0.531 & 0.214 & 0.564 \\
-& +qrel & 0.394 & 0.237 & 0.441 & 0.193 & 0.457 \\\midrule
-\multirow[c]{5}{*}{$t_4$}   & BM25 & 0.299 & 0.172 & 0.387 & 0.145 & 0.326 \\
-& +RM3 & 0.300 & 0.171 & 0.407 & 0.151 & 0.305 \\
-& +Bo1 & 0.307 & 0.177 & 0.405 & 0.153 & 0.326 \\
-& +RF & 0.397 & 0.273 & 0.472 & 0.204 & 0.593 \\
-& +qrel & 0.414 & 0.321 & 0.427 & 0.230 & 0.608 \\\midrule
-\multirow[c]{5}{*}{$t_5$}   & BM25 & 0.215 & 0.133 & 0.291 & 0.109 & 0.300 \\
-& +RM3 & 0.220 & 0.134 & 0.299 & 0.111 & 0.293 \\
-& +Bo1 & 0.218 & 0.132 & 0.297 & 0.112 & 0.285 \\
-& +RF & 0.283 & 0.202 & 0.345 & 0.155 & 0.480 \\
-& +qrel & 0.320 & 0.273 & 0.324 & 0.201 & 0.607 \\
-
-
-    \bottomrule
-    \end{tabular}
+    BM25 \\
+    ColBERT\\
+    List-in-T5\\
+    monoT5\\
     
+    \midrule
+    
+    BM25$_{Boost}$\\
+    BM25$_{RM3}$\\
+    BM25$_{RF}$\\
+    BM25$_{keyquery}$\\
+
+\bottomrule
+\end{tabular}
+\end{table}
