--- a/notebooks/evaluate-with-ir-datasets.ipynb
+++ b/notebooks/evaluate-with-ir-datasets.ipynb
@@ -63,6 +63,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def table_line(df, approach):\n",
+    "    df = df[df['system'] == approach]\n",
+    "    ret = []\n",
+    "    for measure in ['nDCG', 'nDCG(Condensed)']:\n",
+    "        for timestamp in ['t1', 't2', 't3', 't4', 't5']:\n",
+    "            score = df[df['timestamp'] == timestamp]\n",
+    "            assert len(score) == 1\n",
+    "            ret += ['{:.3f}'.format(score.iloc[0][measure]).replace('0.', '.')]\n",
+    "    return ' & '.join(ret)\n",
+    "\n",
+    "def plot_table(df):\n",
+    "    return print('''\n",
+    "\\\\begin{tabular}{@{}l@{}cccccccccc@{}}\n",
+    "    \\\\toprule\n",
+    "    \\\\bfseries System & \\\\multicolumn{5}{c}{\\\\bfseries nDCG@10} & \\\\multicolumn{5}{c}{\\\\bfseries nDCG@10$^{'}$}\\\\\\\\\n",
+    "    \\\\cmidrule(r@{.25em}){2-6}\n",
+    "    \\\\cmidrule(l@{.25em}){7-11}\n",
+    "    \n",
+    "    & 07/23 & 09/23 & 01/24 & 06/24 & 08/24 & 07/23 & 09/23 & 01/24 & 06/24 & 08/24\\\\\\\\\n",
+    "    \n",
+    "    \\\\midrule\n",
+    "\n",
+    "    BM25 & ''' + table_line(df, 'BM25') + ''' \\\\\\\\\n",
+    "    ColBERT & ''' + table_line(df, 'ColBERT') + ''' \\\\\\\\\n",
+    "    List-in-T5 & ''' + table_line(df, 'castorini-list-in-t5-150') + ''' \\\\\\\\\n",
+    "    monoT5 & ''' + table_line(df, 'MonoT5') + ''' \\\\\\\\\n",
+    "    \n",
+    "    \\\\midrule\n",
+    "    \n",
+    "    BM25$_{Boost}$ & ''' + table_line(df, 'BM25+qrel_boost') + ''' \\\\\\\\\n",
+    "    BM25$_{RM3}$ & ''' + table_line(df, 'BM25+RM3') + ''' \\\\\\\\\n",
+    "    BM25$_{RF}$ & ''' + table_line(df, 'BM25+RF') + ''' \\\\\\\\\n",
+    "    BM25$_{keyquery}$ & ''' + table_line(df, 'keyquery') + ''' \\\\\\\\\n",
+    "\n",
+    "\\\\bottomrule\n",
+    "\\\\end{tabular}\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -70,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [03:26<00:00, 25.77s/it]\n"
+      "100%|██████████| 8/8 [03:51<00:00, 28.90s/it]\n"
      ]
     }
    ],
@@ -96,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +500,7 @@
        "39                  keyquery  0.147004         0.368301        t5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,14 +511,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\\begin{tabular}{@{}l@{}cccccccccc@{}}\n",
+      "    \\toprule\n",
+      "    \\bfseries System & \\multicolumn{5}{c}{\\bfseries nDCG@10} & \\multicolumn{5}{c}{\\bfseries nDCG@10$^{'}$}\\\\\n",
+      "    \\cmidrule(r@{.25em}){2-6}\n",
+      "    \\cmidrule(l@{.25em}){7-11}\n",
+      "    \n",
+      "    & 07/23 & 09/23 & 01/24 & 06/24 & 08/24 & 07/23 & 09/23 & 01/24 & 06/24 & 08/24\\\\\n",
+      "    \n",
+      "    \\midrule\n",
+      "\n",
+      "    BM25 & .118 & .152 & .144 & .141 & .120 & .373 & .418 & .451 & .405 & .343 \\\\\n",
+      "    ColBERT & .153 & .173 & .166 & .151 & .138 & .314 & .346 & .360 & .338 & .285 \\\\\n",
+      "    List-in-T5 & .155 & .171 & .172 & .162 & .146 & .313 & .349 & .364 & .342 & .284 \\\\\n",
+      "    monoT5 & .155 & .183 & .167 & .166 & .141 & .316 & .347 & .355 & .341 & .283 \\\\\n",
+      "    \n",
+      "    \\midrule\n",
+      "    \n",
+      "    BM25$_{Boost}$ & .277 & .276 & .235 & .278 & .184 & .437 & .472 & .486 & .454 & .363 \\\\\n",
+      "    BM25$_{RM3}$ & .112 & .150 & .134 & .142 & .122 & .377 & .415 & .455 & .410 & .352 \\\\\n",
+      "    BM25$_{RF}$ & .225 & .237 & .203 & .230 & .156 & .468 & .494 & .510 & .463 & .369 \\\\\n",
+      "    BM25$_{keyquery}$ & .195 & .236 & .180 & .180 & .147 & .424 & .467 & .481 & .436 & .368 \\\\\n",
+      "\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_table(df_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [01:05<00:00,  8.14s/it]\n"
+      "100%|██████████| 8/8 [01:05<00:00,  8.18s/it]\n"
      ]
     }
    ],
@@ -499,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -858,13 +945,55 @@
        "39                  keyquery  0.162081         0.406310        t5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\\begin{tabular}{@{}l@{}cccccccccc@{}}\n",
+      "    \\toprule\n",
+      "    \\bfseries System & \\multicolumn{5}{c}{\\bfseries nDCG@10} & \\multicolumn{5}{c}{\\bfseries nDCG@10$^{'}$}\\\\\n",
+      "    \\cmidrule(r@{.25em}){2-6}\n",
+      "    \\cmidrule(l@{.25em}){7-11}\n",
+      "    \n",
+      "    & 07/23 & 09/23 & 01/24 & 06/24 & 08/24 & 07/23 & 09/23 & 01/24 & 06/24 & 08/24\\\\\n",
+      "    \n",
+      "    \\midrule\n",
+      "\n",
+      "    BM25 & .112 & .146 & .137 & .133 & .116 & .352 & .390 & .438 & .392 & .338 \\\\\n",
+      "    ColBERT & .198 & .207 & .201 & .184 & .151 & .402 & .409 & .420 & .408 & .315 \\\\\n",
+      "    List-in-T5 & .203 & .204 & .202 & .198 & .161 & .401 & .413 & .425 & .413 & .317 \\\\\n",
+      "    monoT5 & .202 & .219 & .197 & .202 & .154 & .405 & .410 & .415 & .411 & .314 \\\\\n",
+      "    \n",
+      "    \\midrule\n",
+      "    \n",
+      "    BM25$_{Boost}$ & .256 & .250 & .225 & .260 & .177 & .412 & .439 & .472 & .438 & .357 \\\\\n",
+      "    BM25$_{RM3}$ & .106 & .140 & .128 & .137 & .118 & .359 & .390 & .440 & .398 & .347 \\\\\n",
+      "    BM25$_{RF}$ & .223 & .226 & .200 & .222 & .147 & .441 & .466 & .494 & .450 & .362 \\\\\n",
+      "    BM25$_{keyquery}$ & .252 & .285 & .219 & .224 & .162 & .533 & .549 & .552 & .523 & .406 \\\\\n",
+      "\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_table(df_eval)"
    ]
   }
  ],
