--- a/paper/table-results-fold.tex
+++ b/paper/table-results-fold.tex
@@ -1,35 +1,32 @@
-\begin{tabular}{llrrrrr}
+\begin{table}[t]
+\small
+\centering
+\renewcommand{\tabcolsep}{3.2pt}
+\caption{Synthetically evolved.}
+\label{tab:table-results-fold}
+
+\begin{tabular}{@{}l@{}cccccccccc@{}}
     \toprule
-    t & Run & nDCG & nDCG@10 & bpref & P@10 & MRR \\
-    \midrule
-    \multirow[c]{4}{*}{$t_1$} & BM25 & 0.210 & 0.125 & 0.228 & 0.069 & 0.218 \\
-    & +RM3 & 0.209 & 0.120 & 0.233 & 0.070 & 0.207 \\
-    & +Bo1 & 0.217 & 0.130 & 0.238 & 0.073 & 0.219 \\
-    & +RF & 0.329 & 0.251 & 0.346 & 0.114 & 0.517 \\
-    & +qrel & 0.366 & 0.312 & 0.315 & 0.131 & 0.598 \\\midrule
-    \multirow[c]{4}{*}{$t_2$} & BM25 & 0.258 & 0.161 & 0.269 & 0.101 & 0.254 \\
-    & +RM3 & 0.256 & 0.156 & 0.266 & 0.101 & 0.246 \\
-    & +Bo1 & 0.262 & 0.160 & 0.271 & 0.102 & 0.252 \\
-    & +RF & 0.358 & 0.262 & 0.351 & 0.141 & 0.512 \\
-    & +qrel & 0.382 & 0.309 & 0.343 & 0.158 & 0.557 \\\midrule
-    \multirow[c]{4}{*}{$t_3$} & BM25 & 0.261 & 0.134 & 0.316 & 0.117 & 0.276 \\
-    & +RM3 & 0.260 & 0.123 & 0.329 & 0.111 & 0.245 \\
-    & +Bo1 & 0.260 & 0.130 & 0.325 & 0.118 & 0.250 \\
-    & +RF & 0.346 & 0.221 & 0.393 & 0.170 & 0.543 \\
-    & +qrel & 0.334 & 0.223 & 0.361 & 0.164 & 0.508 \\\midrule
-    \multirow[c]{4}{*}{$t_4$} & BM25 & 0.234 & 0.139 & 0.306 & 0.116 & 0.287 \\
-    & +RM3 & 0.236 & 0.141 & 0.321 & 0.123 & 0.273 \\
-    & +Bo1 & 0.242 & 0.145 & 0.321 & 0.123 & 0.293 \\
-    & +RF & 0.312 & 0.229 & 0.360 & 0.163 & 0.542 \\
-    & +qrel & 0.343 & 0.277 & 0.354 & 0.189 & 0.606 \\\midrule
-    \multirow[c]{4}{*}{$t_5$} & BM25 & 0.185 & 0.116 & 0.251 & 0.094 & 0.276 \\
-    & +RM3 & 0.189 & 0.118 & 0.258 & 0.096 & 0.271 \\
-    & +Bo1 & 0.187 & 0.116 & 0.256 & 0.097 & 0.261 \\
-    & +RF & 0.225 & 0.162 & 0.276 & 0.119 & 0.419 \\
-    & +qrel & 0.240 & 0.187 & 0.269 & 0.135 & 0.472 \\
-
-
-    \bottomrule
-\end{tabular}
+    \bfseries System & \multicolumn{5}{c}{\bfseries nDCG@10} & \multicolumn{5}{c}{\bfseries nDCG@10$^{'}$}\\
+    \cmidrule(r@{.25em}){2-6}
+    \cmidrule(l@{.25em}){7-11}
     
+    & 07/23 & 09/23 & 01/24 & 06/24 & 08/24 & 07/23 & 09/23 & 01/24 & 06/24 & 08/24\\
+    
+    \midrule
 
+    BM25 & .118 & .152 & .144 & .141 & .120 & .373 & .418 & .451 & .405 & .343 \\
+    ColBERT & .153 & .173 & .166 & .151 & .138 & .314 & .346 & .360 & .338 & .285 \\
+    List-in-T5 & .155 & .171 & .172 & .162 & .146 & .313 & .349 & .364 & .342 & .284 \\
+    monoT5 & .155 & .183 & .167 & .166 & .141 & .316 & .347 & .355 & .341 & .283 \\
+    
+    \midrule
+    
+    BM25$_{Boost}$ & .277 & .276 & .235 & .278 & .184 & .437 & .472 & .486 & .454 & .363 \\
+    BM25$_{RM3}$ & .112 & .150 & .134 & .142 & .122 & .377 & .415 & .455 & .410 & .352 \\
+    BM25$_{RF}$ & .225 & .237 & .203 & .230 & .156 & .468 & .494 & .510 & .463 & .369 \\
+    BM25$_{keyquery}$ & .195 & .236 & .180 & .180 & .147 & .424 & .467 & .481 & .436 & .368 \\
+
+\bottomrule
+\end{tabular}
+\end{table}
