--- a/paper/table-results.tex
+++ b/paper/table-results.tex
@@ -2,7 +2,7 @@
 \small
 \centering
 \renewcommand{\tabcolsep}{3.2pt}
-\caption{ }
+\caption{Naturally evolved corpus.}
 \label{tab:table-results}
 
 \begin{tabular}{@{}l@{}cccccccccc@{}}
@@ -15,17 +15,17 @@
     
     \midrule
 
-    BM25 \\
-    ColBERT\\
-    List-in-T5\\
-    monoT5\\
+    BM25 & .112 & .146 & .137 & .133 & .116 & .352 & .390 & .438 & .392 & .338 \\
+    ColBERT & .198 & .207 & .201 & .184 & .151 & .402 & .409 & .420 & .408 & .315 \\
+    List-in-T5 & .203 & .204 & .202 & .198 & .161 & .401 & .413 & .425 & .413 & .317 \\
+    monoT5 & .202 & .219 & .197 & .202 & .154 & .405 & .410 & .415 & .411 & .314 \\
     
     \midrule
     
-    BM25$_{Boost}$\\
-    BM25$_{RM3}$\\
-    BM25$_{RF}$\\
-    BM25$_{keyquery}$\\
+    BM25$_{Boost}$ & .256 & .250 & .225 & .260 & .177 & .412 & .439 & .472 & .438 & .357 \\
+    BM25$_{RM3}$ & .106 & .140 & .128 & .137 & .118 & .359 & .390 & .440 & .398 & .347 \\
+    BM25$_{RF}$ & .223 & .226 & .200 & .222 & .147 & .441 & .466 & .494 & .450 & .362 \\
+    BM25$_{keyquery}$ & .252 & .285 & .219 & .224 & .162 & .533 & .549 & .552 & .523 & .406 \\
 
 \bottomrule
 \end{tabular}
