--- a/paper/table-results-fold.tex
+++ b/paper/table-results-fold.tex
@@ -22,10 +22,10 @@
     
     \midrule
     
-    BM25$_{Boost}$ & .277 & .276 & .235 & .278 & .184 & .437 & .472 & .486 & .454 & .363 \\
+    BM25$_{Boost}$ & \bfseries .277 & \bfseries .276 & \bfseries .235 & \bfseries .278 & \bfseries .184 & \bfseries .437 & \bfseries .472 & \bfseries .486 & \bfseries .454 & .363 \\
     BM25$_{RM3}$ & .112 & .150 & .134 & .142 & .122 & .377 & .415 & .455 & .410 & .352 \\
     BM25$_{RF}$ & .225 & .237 & .203 & .230 & .156 & .468 & .494 & .510 & .463 & .369 \\
-    BM25$_{keyquery}$ & .195 & .236 & .180 & .180 & .147 & .424 & .467 & .481 & .436 & .368 \\
+    BM25$_{keyquery}$ & .195 & .236 & .180 & .180 & .147 & .424 & .467 & .481 & .436 & \bfseries.368 \\
 
 \bottomrule
 \end{tabular}
