--- a/paper/table-results.tex
+++ b/paper/table-results.tex
@@ -22,10 +22,10 @@
     
     \midrule
     
-    BM25$_{Boost}$ & .256 & .250 & .225 & .260 & .177 & .412 & .439 & .472 & .438 & .357 \\
+    BM25$_{Boost}$ & \bfseries .256 & .250 & \bfseries .225 & \bfseries .260 & \bfseries .177 & .412 & .439 & .472 & .438 & .357 \\
     BM25$_{RM3}$ & .106 & .140 & .128 & .137 & .118 & .359 & .390 & .440 & .398 & .347 \\
     BM25$_{RF}$ & .223 & .226 & .200 & .222 & .147 & .441 & .466 & .494 & .450 & .362 \\
-    BM25$_{keyquery}$ & .252 & .285 & .219 & .224 & .162 & .533 & .549 & .552 & .523 & .406 \\
+    BM25$_{keyquery}$ & .252 & \bfseries .285 & .219 & .224 & .162 & \bfseries .533 & \bfseries .549 & \bfseries .552 & \bfseries .523 & \bfseries .406 \\
 
 \bottomrule
 \end{tabular}
